2011-12-05  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb, lib/oci8/properties.rb, test/test_datetime.rb.
	    add OCI8.properties[:time_zone] and use ENV['TZ'] or the time_zone
	    propery to set Oracle session time zone.
	    Fix #3 at http://github.com/kubo/ruby-oci8.
	    (reported by Yasuo Honda)

2011-12-05  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/encoding-init.rb, lib/oci8/oci8.rb: add OCI8.client_charset_name.
	* test/config.rb: use OCI8.client_charset_name instead of OCI8.encoding.
	    Ruby-oci8 compiled for ruby 1.8 doesn't has the latter.
	* lib/oci8/properties.rb, test/test_all.rb, test/test_bind_string.rb,
	  test/test_encoding.rb: add a test for OCI8.properties[:lenght_semantics]
	    and move the test for OCI8.properties[:bind_string_as_nchar] from
	    test/test_encoding.rb to test/test_bind_string.rb.

2011-12-04  KUBO Takehiro  <kubo@jiubao.org>
	* test/config.rb, test/test_encoding.rb: add tests for bind_string_as_nchar
	    property.
	* ext/oci8/metadata.c, lib/oci8/metadata.rb: delete the internally used
	    OCI8::Metadata::Base#__charset_name method.
	* lib/oci8/oci8.rb: add OCI8#database_charset_name. (added to test
	    bind_string_as_nchar.)

2011-12-03  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8.rb.in: fix to work with ruby 2.0.

2011-12-03  KUBO Takehiro  <kubo@jiubao.org>
	* test/test_connection_pool.rb: fix to pass a connection pool test.
	    OCI8::ConnectionPool#open_count after decrement depends on
	    Oracle version. (reported by Yasuo Honda)

2011-12-03  KUBO Takehiro  <kubo@jiubao.org>
	* test/test_metadata.rb: Check object type availability by querying
	    all_objects data dictionary. Fix #3 at http://github.com/kubo/ruby-oci8.
	    (reported by Yasuo Honda)

2011-12-03  KUBO Takehiro  <kubo@jiubao.org>
	* ruby-oci8.gemspec: Use Gem::Command.build_args to get arguments
	    after '--'. This may solve issues #4 at http://github.com/kubo/ruby-oci8.
	    (reported by jbirdjavi)
