@@ -39,10 +39,22 @@ class TestConnectionPool < Test::Unit::TestCase
     assert_equal(min_cnt, pool.open_count, msg)
     assert_equal(0, pool.busy_count, msg)
 
+    non_blocking = true
+
     # Create connections from the pool.
     conns = []
-    max_cnt.times do
-      conns << OCI8.new($dbuser, $dbpass, pool)
+    max_cnt.times do |cnt|
+      conn = OCI8.new($dbuser, $dbpass, pool)
+      if cnt == 0
+        unless conn.non_blocking?
+          non_blocking = false
+          assert_raise(RuntimeError) do
+            # This should raise "Could not set non-blocking mode to a connection allocated from OCI8::ConnectionPool."
+            conn.non_blocking = true
+          end
+        end
+      end
+      conns << conn
     end
     assert_equal(min_cnt, pool.open_count, msg)
     assert_equal(0, pool.busy_count, msg)
@@ -54,7 +66,7 @@ class TestConnectionPool < Test::Unit::TestCase
       end
       sleep(0.5)
       assert_equal(min_cnt, pool.open_count, msg)
-      assert_equal(1, pool.busy_count, msg)
+      assert_equal(non_blocking ? 1 : 0, pool.busy_count, msg)
       thread.join
     end
     assert_equal(min_cnt, pool.open_count, msg)
@@ -68,8 +80,8 @@ class TestConnectionPool < Test::Unit::TestCase
       end
     end
     sleep(0.5)
-    assert_equal(min_cnt + incr_cnt, pool.open_count, msg)
-    assert_equal(min_cnt + 1, pool.busy_count, msg)
+    assert_equal(non_blocking ? (min_cnt + incr_cnt) : min_cnt, pool.open_count, msg)
+    assert_equal(non_blocking ? (min_cnt + 1) : 0, pool.busy_count, msg)
 
     # Execute blocking SQL statements parallel up to maximum.
     (min_cnt + 1).upto(max_cnt - 1) do |n|
@@ -78,20 +90,20 @@ class TestConnectionPool < Test::Unit::TestCase
       end
     end
     sleep(0.5)
-    assert_equal(max_cnt, pool.open_count, msg)
-    assert_equal(max_cnt, pool.busy_count, msg)
+    assert_equal(non_blocking ? max_cnt : min_cnt, pool.open_count, msg)
+    assert_equal(non_blocking ? max_cnt : 0, pool.busy_count, msg)
 
     # 
     threads.each do |thr|
       thr.join
     end
-    assert_equal(max_cnt, pool.open_count, msg)
+    assert_equal(non_blocking ? max_cnt : min_cnt, pool.open_count, msg)
     assert_equal(0, pool.busy_count, msg)
 
     # Set timeout
     pool.timeout = 1
     sleep(1.5)
-    assert_equal(max_cnt, pool.open_count, msg) # open_count doesn't shrink.
+    assert_equal(non_blocking ? max_cnt : min_cnt, pool.open_count, msg) # open_count doesn't shrink.
     assert_equal(0, pool.busy_count, msg)
     conns[0].ping # make a network roundtrip.
     sleep(0.5)
